# app/routes/user.ts
@@ -1,8 +1,9 @@
 import router from '@adonisjs/core/services/router'
-import UserController from '#controllers/user/user_controller'
 import { apiThrottle } from '#start/limiter'
+
+const UserController = () => import('#controllers/user/user_controller')
 const TranslationController = () => import('#controllers/translation/translation_controller')
-const userController = new UserController()
+
 // 用户相关路由
 router
   .group(() => {
@@ -13,8 +14,8 @@ router
         message: '用户注册成功',
       }
     })
-    router.get('/test', userController.index)
-    router.post('/test/:id', userController.index).use(apiThrottle)
+    router.get('/test', [UserController, 'test'])
+    router.post('/test/:id', [UserController, 'index']).use(apiThrottle)
     router.post('/translation', [TranslationController, 'translate'])
   })
   .prefix('/api/users')
